gcc/testsuite/rust/rustc/ui/abi/removed-wasm-abi_dg.rs
extern "wasm" fn test() {}
// { dg-error ".E0703." "" { target *-*-* } .-1 }

fn main() {}

